--- a/homeworks/vladyslav.medvediev_VladislavMedvedyev/9-animations/index.html
+++ b/homeworks/vladyslav.medvediev_VladislavMedvedyev/9-animations/index.html
@@ -61,7 +61,7 @@
                     <div class="dream-house__image">
                         <picture>
                             <source srcset="images/dream-house-x2.png" media="(min-resolution: 2dppx)">
-                            <img class="img" src="images/dream-house.png" alt="dream house"> 
+                            <img class="img" src="images/dream-house.png" alt="dream house" data-img> 
                         </picture>
                     </div>
                 </section>
@@ -71,25 +71,25 @@
                         <div class="professional-valuable__example">
                             <picture>
                                 <source srcset="images/example_1-x2.png" media="(min-resolution: 2dppx)">
-                                <img class="img" src="images/example_1.png" alt="">
+                                <img class="img" src="images/example_1.png" alt="#" data-img>
                             </picture>
                         </div>
                         <div class="professional-valuable__example">
                             <picture>
                                 <source srcset="images/example_2-x2.png" media="(min-resolution: 2dppx)">
-                                <img class="img" src="images/example_2.png" alt="">
+                                <img class="img" src="images/example_2.png" alt="#" data-img>
                             </picture>
                         </div>
                         <div class="professional-valuable__example">
                             <picture>
                                 <source srcset="images/example_3-x2.png" media="(min-resolution: 2dppx)">
-                                <img class="img" src="images/example_3.png" alt="">
+                                <img class="img" src="images/example_3.png" alt="#" data-img>
                             </picture>
                         </div>
                         <div class="professional-valuable__example">
                             <picture>
                                 <source srcset="images/example_4-x2.png" media="(min-resolution: 2dppx)">
-                                <img class="img" src="images/example_4.png" alt="">
+                                <img class="img" src="images/example_4.png" alt="#" data-img>
                             </picture>
                         </div>
                     </div>
@@ -99,7 +99,7 @@
                     <div class="arcmove-container">
                         <picture class="archmove__picture">
                             <source srcset="images/archmove-x2.png" media="(min-resolution: 2dppx)">
-                            <img class="img" src="images/archmove.png" alt="#">
+                            <img class="img" src="images/archmove.png" alt="#" data-img>
                         </picture>
                         <div class="archmove__advantages advantages">
 
@@ -148,11 +148,11 @@
             <footer class="footer">
                 <section class="footer__realize-project">
                     <div class="realize-project__picture-container">
-                        <img class="realize-project__big-cloud" src="images/big-cloud.png" alt="#">
-                        <img class="realize-project__small-cloud" src="images/small-cloud.png" alt="#">
+                        <img class="realize-project__big-cloud img" src="images/big-cloud.png" alt="#" data-img>
+                        <img class="realize-project__small-cloud img" src="images/small-cloud.png" alt="#" data-img>
                         <picture class="realize-project__picture">
                             <source srcset="images/realize-project-x2.png" media="(min-resolution: 2dppx)">
-                            <img class="img" src="images/realize-project.png" alt="#">
+                            <img class="img" src="images/realize-project.png" alt="#" data-img>
                         </picture>
                     </div>
                     <div class="realize-project-container">
