--- a/homeworks/oleksandr.prylutskiy_SanSandru4/9-animations/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/9-animations/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div class="preloader" data-preloader>
-            <div class="loader__spin"></div>
+            <div class="preloader__spin loader"></div>
             <svg class="loader__logo logo-size">
                 <use class="logo-size__pulse" xlink:href="#logo"></use>
             </svg>
@@ -44,7 +44,7 @@
                     <div class="control">
                         <a href="#" class="control__sign-in">Sign in</a>
                     </div>
-                    <button class="control__btn btn--animation" type="button">Sign Up</button>
+                    <button class="control__btn control__btn--animation" type="button">Sign Up</button>
                 </div>
             </header>
             <main class="main">
@@ -58,24 +58,24 @@
                         </p>
                         <button class="dream-house__btn btn--animation" type="button">Free Consultation</button>
                     </div>
-                    <div class="dream-house__picture picture">
-                        <img class="picture__img" src="img/dream_house.jpg" alt="dream house">
+                    <div class="dream-house__picture animation">
+                        <img class="animation__img" src="img/dream_house.jpg" alt="dream house">
                     </div>
                 </div>
                 <div class="main__build-room build-room">
                     <h3 class="build-room__name">Build professional valuable room for you</h3>
                     <div class="build-room__picture">
-                        <img class="build-room__img picture__img" src="img/room-01.jpg" alt="room 1">
-                        <img class="build-room__img picture__img" src="img/room-02.jpg" alt="room 2">
-                        <img class="build-room__img picture__img" src="img/room-03.jpg" alt="room 3">
-                        <img class="build-room__img picture__img" src="img/room-04.jpg" alt="room 4">
+                        <img class="build-room__img animation__img" src="img/room-01.jpg" alt="room 1">
+                        <img class="build-room__img animation__img" src="img/room-02.jpg" alt="room 2">
+                        <img class="build-room__img animation__img" src="img/room-03.jpg" alt="room 3">
+                        <img class="build-room__img animation__img" src="img/room-04.jpg" alt="room 4">
                     </div>
                 </div>
                 <div class="main__archmove archmove">
                     <h3 class="archmove__name">Build your needs with Archmove</h3>
                     <div class="archmove__info">
-                        <div class="archmove__picture picture">
-                            <img class="picture__img" src="img/people.jpg" alt="archmove">
+                        <div class="archmove__picture animation">
+                            <img class="animation__img" src="img/people.jpg" alt="archmove">
                         </div>
                         <div class="main__archmove-consultation list">
                             <ul class="list">
@@ -119,7 +119,7 @@
                 </div>
                 <div class="main__realize-dream realize-dream">
                     <div class="realize-dream__img">
-                        <img class="picture__img" src="img/house_in_sky.png" alt="house in the sky">
+                        <img class="animation__img" src="img/house_in_sky.png" alt="house in the sky">
                     </div>
                     <div class="realize-dream__text">
                         <h3 class="realize-dream__name">
