Add scroll to top button

--- a/homeworks/vladyslav.medvediev_VladislavMedvedyev/9-animations/index.html
+++ b/homeworks/vladyslav.medvediev_VladislavMedvedyev/9-animations/index.html
@@ -184,7 +184,12 @@
                         <svg class="footer__logo-svg" width="62" height="28" viewBox="0 0 62 28" fill="" xmlns="http://www.w3.org/2000/svg">
                             <use href="images/sprite.svg#logo"></use>
                         </svg>
-                    </a> 
+                    </a>
+                    <div class="up-arrow" data-up-arrow>
+                        <svg class="up-arrow-svg" width="50px" height="50px" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+                            <use href="images/sprite.svg#up-arrow"></use>
+                        </svg>
+                    </div>
                 </div>
             </footer>
         </div>
