--- a/homeworks/maksym.selenkov_MaksymSelenkov/9-animations/index.html
+++ b/homeworks/maksym.selenkov_MaksymSelenkov/9-animations/index.html
@@ -27,7 +27,12 @@
                         <path class="live-logo2" d="M51.5859 22.6995C51.5859 25.9724 54.0045 28 57.0716 28C58.986 28 60.5504 27.3104 61.3017 26.1783L61.2914 25.674C60.7768 26.1989 59.9123 26.5797 58.9036 26.5797C56.8246 26.5797 55.2911 25.0667 55.0235 22.3908H61.4355C61.4561 22.2158 61.487 21.9482 61.487 21.6806C61.487 19.1281 59.7785 17.3682 56.9275 17.3682C53.7164 17.3682 51.5859 19.5707 51.5859 22.6995ZM54.972 21.5056C54.972 19.2928 55.6822 18.0474 56.9275 18.0474C58.0185 18.0474 58.5125 19.2208 58.5125 21.0528C58.5125 21.3512 58.5125 21.5674 58.5022 21.7629L54.9823 21.8041C54.972 21.7012 54.972 21.6086 54.972 21.5056Z" fill="#FD665E"></path>
                     </svg>
                 </a>
-                <nav class="header__nav nav">
+                <div data-burger>
+                    <div class="header__burger-icon bar1"></div>
+                    <div class="header__burger-icon bar2"></div>
+                    <div class="header__burger-icon bar3"></div>
+                </div>
+                <nav class="header__nav nav" data-header-nav>
                     <a href="" class="nav__link">Design Gallery</a>
                     <a href="" class="nav__link">List of Architect</a>
                     <a href="" class="nav__link">Articles</a>
