Add throttle to scroll

--- a/homeworks/vladyslav.medvediev_VladislavMedvedyev/9-animations/index.html
+++ b/homeworks/vladyslav.medvediev_VladislavMedvedyev/9-animations/index.html
@@ -207,6 +207,8 @@
                 </div>
             </footer>
         </div>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/6.6.3/rxjs.umd.min.js" integrity="sha512-JnZPWAckMDks0CCIeGznqEo7ifmYK7VowHq/NVFlSXGkwxv4OBCJFy7nouOtJZmVldHo7FQLIdeWTI55yyZc4Q==" crossorigin="anonymous"></script>
         <script src="script.js"></script>
     </body>
 </html>
