--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -71,7 +71,7 @@
                     <button type="button" class="dreamhouse__button button button--primary">Free Consultation</button>
                 </div>
                 <div class="dreamhouse__photo-container">
-                    <picture class = "photo--disabled">
+                    <picture class = "photo--hidden">
                         <source srcset="2x/computers.jpg 2x">
                         <img src="1x/computers.jpg" alt="computers">
                     </picture>
@@ -85,19 +85,19 @@
                 </h2>
             </div>
             <div class="design__photo">
-                <picture class="photo--disabled">
+                <picture class="photo--hidden">
                     <source srcset="2x/kitchen.jpg 2x">
                     <img src="1x/kitchen.jpg" alt="kitchen">
                 </picture>
-                <picture class="photo--disabled">
+                <picture class="photo--hidden">
                     <source srcset="2x/gasstove.jpg 2x">
                     <img src="1x/gasstove.jpg" alt="gasstove">
                 </picture>
-                <picture class="photo--disabled">
+                <picture class="photo--hidden">
                     <source srcset="2x/bedroom.jpg 2x">
                     <img src="1x/bedroom.jpg" alt="bedroom">
                 </picture>
-                <picture class="photo--disabled">
+                <picture class="photo--hidden">
                     <source srcset="2x/diningroom.jpg 2x">
                     <img src="1x/diningroom.jpg" alt="diningroom">
                 </picture>
@@ -109,7 +109,7 @@
             </h2>
             <div class="archmove__container" data-archmove>
                 <div>
-                    <picture class="archmove__photo photo--disabled">
+                    <picture class="archmove__photo photo--hidden">
                         <source srcset="2x/meeting.jpg 2x">
                         <img src="1x/meeting.jpg" alt="meeting">
                     </picture>
@@ -163,7 +163,7 @@
         <div class="dream-project">
             <div class="dream-project__container" data-dream-project>
                 <div class="dream-project__photo">
-                    <picture class="photo--disabled">
+                    <picture class="photo--hidden">
                         <source srcset="2x/house.png 2x">
                         <img src="1x/house.png" alt="diningroom">
                     </picture>
