--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -52,7 +52,7 @@
                 <use xlink:href="sprite.svg#button-up"></use>
             </svg>
         </button>
-        <div class="dreamhouse" data-dreamhouse>
+        <div class="dreamhouse">
             <h1 class="dreamhouse__title">
                 Build Your<br>
                 Dream <span class="text--accent">House</span>
@@ -70,7 +70,7 @@
                     </div>
                     <button type="button" class="dreamhouse__button button button--primary">Free Consultation</button>
                 </div>
-                <div class="dreamhouse__photo-container">
+                <div class="dreamhouse__photo-container image-translate" data-image-in>
                     <picture>
                         <source srcset="2x/computers.jpg 2x">
                         <img src="1x/computers.jpg" alt="computers">
@@ -79,12 +79,12 @@
             </div>
         </div>
         <div class="design">
-            <div class="design__title" data-design>
+            <div class="design__title">
                 <h2 class="design__text">Build professional
                     <br>valuable room for you
                 </h2>
             </div>
-            <div class="design__photo">
+            <div class="design__photo-container image-translate" data-image-in>
                 <picture>
                     <source srcset="2x/kitchen.jpg 2x">
                     <img src="1x/kitchen.jpg" alt="kitchen">
@@ -97,7 +97,7 @@
                     <source srcset="2x/bedroom.jpg 2x">
                     <img src="1x/bedroom.jpg" alt="bedroom">
                 </picture>
-                <picture class>
+                <picture>
                     <source srcset="2x/diningroom.jpg 2x">
                     <img src="1x/diningroom.jpg" alt="diningroom">
                 </picture>
@@ -107,9 +107,9 @@
             <h2 class="archmove__title">Build your needs
                 <br>with Archmove
             </h2>
-            <div class="archmove__container" data-archmove>
-                <div>
-                    <picture class="archmove__photo">
+            <div class="archmove__container">
+                <div class="archmove__photo-container image-translate" data-image-in>
+                    <picture>
                         <source srcset="2x/meeting.jpg 2x">
                         <img src="1x/meeting.jpg" alt="meeting">
                     </picture>
@@ -161,8 +161,8 @@
             </div>
         </div>
         <div class="dream-project">
-            <div class="dream-project__container" data-dream-project>
-                <div class="dream-project__photo">
+            <div class="dream-project__container">
+                <div class="dream-project__photo-container">
                     <picture>
                         <source srcset="2x/house.png 2x">
                         <img src="1x/house.png" alt="diningroom">
