--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -70,7 +70,7 @@
                     </div>
                     <button type="button" class="dreamhouse__button button button--primary">Free Consultation</button>
                 </div>
-                <div class="dreamhouse__photo-container image-translate" data-image-in>
+                <div class="dreamhouse__photo-container image" data-image-in>
                     <picture>
                         <source srcset="2x/computers.jpg 2x">
                         <img src="1x/computers.jpg" alt="computers">
@@ -84,7 +84,7 @@
                     <br>valuable room for you
                 </h2>
             </div>
-            <div class="design__photo-container image-translate" data-image-in>
+            <div class="design__photo-container image" data-image-in>
                 <picture>
                     <source srcset="2x/kitchen.jpg 2x">
                     <img src="1x/kitchen.jpg" alt="kitchen">
@@ -108,7 +108,7 @@
                 <br>with Archmove
             </h2>
             <div class="archmove__container">
-                <div class="archmove__photo-container image-translate" data-image-in>
+                <div class="archmove__photo-container image" data-image-in>
                     <picture>
                         <source srcset="2x/meeting.jpg 2x">
                         <img src="1x/meeting.jpg" alt="meeting">
