added Ipad & mobile

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -18,6 +18,11 @@
                     <use xlink:href="sprite.svg#logo"></use>
                 </svg>
             </div>
+            <div class="header__burger" data-header-burger>
+                <svg width="80px">
+                    <use xlink:href="sprite.svg#burger"></use>
+                </svg>
+            </div>
             <nav class="header__menu">
                 <ul class="menu__list">
                     <li class="menu__line">
