--- a/homeworks/nikolay.krasniuk_Kingstar22/10-components/src/index.html
+++ b/homeworks/nikolay.krasniuk_Kingstar22/10-components/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>10Components</title>
+        <title>10-Components</title>
         <base href="/">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
