--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -13,31 +13,19 @@
     </head>
     <body>
         <header class="header__content">
-            <div class="header__logo">
-                <svg class="logo">
-                    <use xlink:href="sprite.svg#logo"></use>
-                </svg>
-            </div>
+            <svg class="header__logo logo">
+                <use xlink:href="sprite.svg#logo"></use>
+            </svg>
             <div class="header__burger" data-header-burger>
                 <svg width="80px">
                     <use xlink:href="sprite.svg#burger"></use>
                 </svg>
             </div>
             <nav class="header__menu">
-                <ul class="menu__list">
-                    <li class="menu__line">
-                        <a class="menu__link" href="#">Design Gallery</a>
-                    </li>
-                    <li class="menu__line">
-                        <a class="menu__link" href="#">List of Architect</a>
-                    </li>
-                    <li class="menu__line">
-                        <a class="menu__link" href="#">Articles</a>
-                    </li>
-                    <li class="menu__line">
-                        <a class="menu__link" href="#">How it Works</a>
-                    </li>
-                </ul>
+                <a class="menu__link" href="#">Design Gallery</a>
+                <a class="menu__link" href="#">List of Architect</a>
+                <a class="menu__link" href="#">Articles</a>
+                <a class="menu__link" href="#">How it Works</a>
             </nav>
             <div class="header__buttons">
                 <div class="theme-toggle" data-toggle>
@@ -185,36 +173,24 @@
                 </div>
             </div>
             <div class="footer">
-                <nav class="footer__menu">
-                    <ul class="footer__list">
-                        <li class="footer__line">
-                            <a href="#" class="menu__link">
-                                <b>About Us</b>
-                            </a>
-                        </li>
-                        <li class="footer__line">
-                            <a href="#" class="menu__link">
-                                <b>How it Works</b>
-                            </a>
-                        </li>
-                        <li class="footer__line">
-                            <a href="#" class="menu__link">
-                                <b>FAQ</b>
-                            </a>
-                        </li>
-                        <li class="footer__line">
-                            <a href="#" class="menu__link">
-                                <b>Contact Us</b>
-                            </a>
-                        </li>
-                        <li class="footer__line">
-                            <a href="#" class="menu__link">
-                                <b>Privacy Policy</b>
-                            </a>
-                        </li>
-                    </ul>
+                <nav>
+                    <a href="#" class="menu__link">
+                        <b>About Us</b>
+                    </a>
+                    <a href="#" class="menu__link">
+                        <b>How it Works</b>
+                    </a>
+                    <a href="#" class="menu__link">
+                        <b>FAQ</b>
+                    </a>
+                    <a href="#" class="menu__link">
+                        <b>Contact Us</b>
+                    </a>
+                    <a href="#" class="menu__link">
+                        <b>Privacy Policy</b>
+                    </a>
                 </nav>
-                <svg class="logo footer__logo">
+                <svg class="logo">
                     <use xlink:href="sprite.svg#logo"></use>
                 </svg>
             </div>
