changed button back-to-top

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -16,10 +16,6 @@
             <svg class="header__logo logo">
                 <use xlink:href="sprite.svg#logo"></use>
             </svg>
-            <div class="header__burger" data-header-burger>
-                <svg width="80px">
-                    <use xlink:href="sprite.svg#burger"></use>
-                </svg>
             </div>
             <nav class="header__menu">
                 <a class="menu__link" href="#">Design Gallery</a>
@@ -40,7 +36,7 @@
                 <button type="button" class="button__sign-up button button--primary">Sign Up</button>
             </div>
         </header>
-        <button type="button" class="button__up--active button__up--hidden" data-button-up>
+        <button type="button" class="button__back-to-top--hidden button__back-to-top--active" data-back-to-top>
             <svg width="30" height="30">
                 <use xlink:href="sprite.svg#button-up"></use>
             </svg>
